<resources>
    <string name="app_name">PruebasCameraX_MLKit</string>

    <!-- Fragment Menu Principal -->
    <string name="titMenuPrincipal">Menu Principal</string>
    <string name="titApartadoCameraX">Apartado Camera X</string>
    <string name="titApartadoMLKit">Apartado ML Kit</string>
    <string name="txtOpcionCameraX">* Prueba Camera X</string>
    <string name="txtOpcionLectorQR">* Prueba Lector QR</string>
    <string name="txtOpcionEtiquetadoImagenes">* Prueba Etiquetado Imagenes</string>
    <string name="txtOpcionDetectorImages">* Prueba Detector Objetos</string>
    <string name="txtOpcionReconocimientoTexto">* Prueba Reconocimiento Texto</string>
    <!-- Fin Fragment Menu Principal -->

    <!-- Fragment CameraX -->
    <string name="titFragmentCameraX">Prueba CameraX</string>
    <string name="errorCameraX">Error al Iniciar la Camara</string>
    <!-- Fin Fragment CameraX -->

    <!-- Fragment LectorQR -->
    <string name="titFragmentLectorQR">Prueba Lector QR</string>
    <!-- Fin Fragment LectorQR -->

    <!-- Fragment EtiquetadoImagenes -->
    <string name="titFragmentEtiquetadoImagenes">Prueba Etiquetado Imagenes</string>
    <string name="txtInfoEtiquetadoImagenes">Se etiquetan los objetos detectados en la imagen obtenida por la camara, para ello el analizador usa un modelo estandar con mas de 400 etiquetas (Mesa, TV, Ordenador...etc).</string>
    <!-- Fin Fragment EtiquetadoImagenes -->

    <!-- Fragment DetectorObjetos -->
    <string name="titFragmentDetectorObjetos">Prueba Detector Objetos</string>
    <string name="txtInfoDetectorImagenes">Se detectan los objetos en la imagen obtenida por la camara, se obtiene el nombre de los objetos y su posicion en la imagen para asi por ejemplo poder marcarlos con un rectangulo.</string>
    <!-- Fin Fragment EtiquetadoImagenes -->

    <!-- Fragment ReconocimientoTexto -->
    <string name="titFragmentReconocimientoTexto">Prueba Reconocimiento Texto</string>
    <string name="titMenuLatino">Caracteres Latinos</string>
    <string name="titMenuDevanagari">Caracteres Devanagari</string>
    <string name="titMenuJapones">Caracteres Japonenes</string>
    <string name="titMenuKoreano">Caracteres Koreanos</string>
    <string name="titMenuChino">Caracteres Chinos</string>
    <string name="titDialogTextoCapturado">Texto Capturado</string>
    <string name="btnAceptar">Aceptar</string>
    <!-- Fin Fragment ReconocimientoTexto -->

</resources>